Bug 424548 - Allow UI tests by tycho on OSX
Signed-off-by: Thanh Ha <thanh.ha@eclipse.org>